--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ a:hover{
 	border-bottom: solid 1px;
 }
 /* header*/
+#top-head{
+	display: none;
+}
 .header_h{
 	width: 850px;
 	margin: auto;
@@ -148,38 +151,6 @@ nav.fixed .header_R ul{
 nav.fixed .header_R ul li{
 	float: left;
 }
-/* モバイル用navi*/
-#navToggle {
-    　display: none;
-      position:absolute; 
-      right:13px;
-      top:13px;
-      width:30px;
-      height:25px;
-      cursor:pointer;
-}
-#navToggle div {
-	position:relative;
-}
-/*spanの絶対位置指定の親にします*/
-#navToggle span {
-      display:block;
-      position:absolute;
-      width:100%;
-      border-bottom:solid 3px #999;
-      -webkit-transition: .35s ease-in-out;
-      -moz-transition: .35s ease-in-out;
-      transition: .35s ease-in-out;
-}
-#navToggle span:nth-child(1) {
-	  top:0;
-}
-#navToggle span:nth-child(2) {
-	  top:11px;
-}
-#navToggle span:nth-child(3) {
-	  top:22px;
-} 
 /* footer*/
 #footer{
 	clear: both;
