--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,70 +10,168 @@
 	display: none;
 }
 /* navi*/
-nav ul.navi, .header_R, .header_b{
+nav .navi, .header_R, .header_b{
 	display: none;
 }
 nav, .header_h{
+	width: 100%;
+}
+nav.fixed .header_h{
 	width: 100%;
 }
 .h_logo{
 	width: 100%;
 	float: none;
 	text-align: center;
+	padding-top: 0;
 }
 .header_R_mobile{
 	display: block;
 	float: right;
 	padding-bottom: 10px;
+	margin-right: 5px;
 }
 .header_R_mobile p{
 	width: 100%;
 	padding: 0;
 }
-.header_R_mobile ul li.sns{
+.header_R_mobile ul .sns{
 	float: left;
-    padding-top: 5px;
+    padding: 10px 3px 10px;
 }
-.header_R_mobile ul.sns_mobile{
-	width: 141px;
-	padding-bottom: 15px;
+.header_R_mobile .sns_mobile{
+	width: 131px;
+	padding-top: 7px;
+	float: right;
 }
 .header_R_mobile ul:after{
 	content: '';
 	clear: both;
 }
-#navToggle {
-    display:block; 
-    position:absolute; 
-    right:13px;
-    top:13px;
-    width:30px;
-    height:25px;
-    cursor:pointer;
-    background-color: #243E65;
+#top-head{
+	display: block;
 }
-#navToggle div {
-	position:relative
+/* Toggle Button */
+#nav-toggle {
+    position: absolute;
+    right: 12px;
+    top: 14px;
+    width: 34px;
+    height: 36px;
+    cursor: pointer;
+    z-index: 101;
 }
-/*spanの絶対位置指定の親にします*/
-#navToggle span {
-    display:block;
-    position:absolute;
-    width:100%;
-    border-bottom:solid 3px #999;
+nav{
+	height: auto;
+}
+#nav-toggle div {
+    position: relative;
+}
+#nav-toggle span {
+    display: block;
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    background: #666;
+    left: 0;
     -webkit-transition: .35s ease-in-out;
     -moz-transition: .35s ease-in-out;
     transition: .35s ease-in-out;
 }
-#navToggle span:nth-child(1) {
-	top:0;
+#nav-toggle span:nth-child(1) {
+    top: 0;
 }
-#navToggle span:nth-child(2) {
-	top:11px;
+#nav-toggle span:nth-child(2) {
+    top: 11px;
 }
-#navToggle span:nth-child(3) {
-	top:22px;
-} 	
+#nav-toggle span:nth-child(3) {
+    top: 22px;
+}
+#top-head,
+    .inner {
+        width: 100%;
+        padding: 0;
+    }
+#top-head {
+    top: 0;
+    position: fixed;
+    margin-top: 0;
+}
+#top-head.fixed {
+    padding-top: 0;
+    background: transparent;
+}
+#mobile-head {
+    background: #fff;
+    width: 100%;
+    height: 95px;
+    z-index: 999;
+    position: relative;
+}
+#top-head.fixed .logo,
+#top-head .logo {
+    position: absolute;
+    left: 13px;
+    top: 13px;
+    color: #333;
+    font-size: 26px;
+}
+#global-nav {
+    position: absolute;
+    top: -470px;
+    background: #333;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+}
+#global-nav ul {
+    list-style: none;
+    position: static;
+    right: 0;
+    bottom: 0;
+    font-size: 14px;
+}
+#global-nav ul li {
+    float: none;
+    position: static;
+}
+#top-head #global-nav ul li a,
+#top-head.fixed #global-nav ul li a {
+    width: 100%;
+    display: block;
+    color: #fff;
+    padding: 18px 0;
+}
+#nav-toggle {
+    display: block;
+}
+.open #nav-toggle span:nth-child(1) {
+    top: 11px;
+    -webkit-transform: rotate(315deg);
+    -moz-transform: rotate(315deg);
+    transform: rotate(315deg);
+}
+.open #nav-toggle span:nth-child(2) {
+    width: 0;
+    left: 50%;
+}
+.open #nav-toggle span:nth-child(3) {
+    top: 11px;
+    -webkit-transform: rotate(-315deg);
+    -moz-transform: rotate(-315deg);
+    transform: rotate(-315deg);
+}
+.open #global-nav {
+    -moz-transform: translateY(556px);
+    -webkit-transform: translateY(556px);
+    transform: translateY(556px);
+}
+a{
+	text-decoration: none;
+}
 /* topページ*/	
 .top_img{
 	background-image: none;
