--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -21,21 +21,16 @@
 {
     font-size: 0;
     line-height: 0;
-
     position: absolute;
     top: 50%;
-
     display: block;
-
     width: 20px;
     height: 20px;
     padding: 0;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
-
     cursor: pointer;
-
     color: transparent;
     border: none;
     outline: none;
@@ -71,7 +66,7 @@
     line-height: 1;
 
     opacity: .75;
-    color: white;
+    color: #987108;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -88,11 +83,11 @@
 }
 .slick-prev:before
 {
-    content: '←';
+    content: '\2190';
 }
 [dir='rtl'] .slick-prev:before
 {
-    content: '→';
+    content: '\2192';
 }
 
 .slick-next
@@ -106,11 +101,11 @@
 }
 .slick-next:before
 {
-    content: '→';
+    content: '\2192';
 }
 [dir='rtl'] .slick-next:before
 {
-    content: '←';
+    content: '\2190';
 }
 
 /* Dots */
@@ -188,7 +183,7 @@
     width: 20px;
     height: 20px;
 
-    content: '•';
+    content: '\2022';
     text-align: center;
 
     opacity: .25;
